# messanger

./: .env.example  .gitignore  README.md  diploma.odt
api/: Cargo.toml  build.rs
api/proto/: auth.proto  solar-system-info.proto
api/src/: auth.rs  main.rs  solar_system_info.rs
api/src/auth/: auth.rs  constants.rs  mod.rs  service.rs  utils.rs
api/src/protobufs/: auth.rs  solar_system_info.rs
database_api/: .env.example  Cargo.toml  diesel.toml  justfile
database_api/database_scheme/: attachments.md  direct_chat_message.md  direct_chats.md  message_attachment.md  users.md
database_api/migrations/2025-01-26-145859_initial_migration/: down.sql  up.sql
database_api/migrations/2025-02-02-110929_refresh_tokens/: down.sql  up.sql
database_api/src/: connection.rs  lib.rs  schema.rs
database_api/src/api/: mod.rs  refresh_token.rs  users.rs
database_api/src/models/: attachments.rs  direct_chat.rs  direct_chat_message.rs  message.rs  message_attachment.rs  mod.rs  refresh_token.rs  user.rs  users.rs
database_scheme/: message.md
docs/: description.md
example_client/: README.md  build.py
example_client/src/: main.py
example_client/src/proto/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py
services/: .env.example  README.md  docker-compose.yml
